# motis

./: .clang-format  .clang-tidy.in  .env-example  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.build  Dockerfile.runtime  LICENSE  README.md  assistance_times.csv  build.sh  calibrate.py  docker-compose.build.yml  docker-compose.yml  hhlr_job.sh  import.sh  itinerary_id.proto  motis-import.sh  openapi.yaml  package-lock.json  package.json  run.sh
base/bootstrap/: CMakeLists.txt  modules.h.in
base/bootstrap/src/: import_coastline.cc  import_dem.cc  import_files.cc  import_osm.cc  import_schedule.cc  import_status.cc  motis_instance.cc  remote_settings.cc
base/bootstrap/test/: import_files_test.cc
base/core/: CMakeLists.txt
base/core/src/: bfs.cc  build_platform_node.cc  build_route_node.cc  check_journey.cc  generate_journey_transport.cc  journey_util.cc  journeys_to_message.cc  logging.cc  message_to_journeys.cc  print_journey.cc  print_trip.cc  serialization.cc  time.cc  trip.cc
base/core/test/: dynamic_fws_multimap_test.cc  fws_graph_test.cc  fws_multimap_test.cc  hotel_edge_test.cc  journey_converter_test.cc  route_edge_test.cc  timezone_test.cc  waiting_time_test.cc
base/data/: CMakeLists.txt
base/launcher/: CMakeLists.txt
base/launcher/src/: batch_mode.cc  load_server_certificate.cc  main.cc  web_server.cc
base/loader/: CMakeLists.txt
base/loader/schedule-format/: Attribute.fbs  Category.fbs  Direction.fbs  Footpath.fbs  Interval.fbs  MetaStation.fbs  ParserOption.fbs  Platform.fbs  Provider.fbs  Route.fbs  RuleService.fbs  Schedule.fbs  Section.fbs  Service.fbs  Station.fbs  Timezone.fbs  Track.fbs
base/loader/src/: build_footpaths.cc  build_stations.cc  classes.cc  footpaths.cc  graph_builder.cc  interval_util.cc  loaded_file.cc  loader.cc  loader_options.cc  route.cc  rule_route_builder.cc  rule_service_graph_builder.cc  timezone_util.cc  util.cc  wzr_loader.cc
base/loader/test/: timezone_test.cc  util_test.cc  wzr_loader_test.cc
base/module/: CMakeLists.txt
base/module/src/: clog_redirect.cc  controller.cc  ctx_data.cc  dispatcher.cc  event_collector.cc  fix_json.cc  message.cc  module.cc  registry.cc  remote.cc  shared_data.cc  subc_reg.cc  timer.cc
base/module/test/: clog_redirect_test.cc  fix_json_test.cc  register_op_test.cc  state_io_test.cc
libs/json/: CMakeLists.txt
libs/json/src/: json.cc
libs/path/: CMakeLists.txt
libs/path/src/: error.cc  path_data.cc  path_database.cc  path_database_query.cc  path_index.cc  path_zoom_level.cc  polyline_builder.cc
modules/address/: CMakeLists.txt
modules/address/src/: address.cc
modules/adr/: CMakeLists.txt
modules/adr/src/: adr.cc
modules/bikesharing/: CMakeLists.txt
modules/bikesharing/dbschema/: Summary.fbs  Terminal.fbs
modules/bikesharing/src/: bikesharing.cc  database.cc  find_connections.cc  geo_index.cc  geo_terminals.cc  nextbike_initializer.cc  terminal.cc
modules/bikesharing/test/: nextbike_initializer_test.cc  nextbike_itest.cc  terminal_test.cc
modules/cc/: CMakeLists.txt
modules/cc/src/: cc.cc
modules/cc/test/: cc_itest.cc  schedule.h
modules/chat/: CMakeLists.txt
modules/chat/src/: chat.cc
modules/csa/: CMakeLists.txt
modules/csa/src/: build_csa_timetable.cc  collect_start_times.cc  csa.cc  csa_query.cc  csa_timetable.cc  csa_to_journey.cc  run_csa_search.cc
modules/csa/test/: ontrip_station_test.cc
modules/footpaths/: CMakeLists.txt
modules/footpaths/src/: database.cc  footpaths.cc  matching.cc  platforms.cc  transfer_requests.cc  transfer_results.cc  transfer_updates.cc  transfers.cc  transfers_to_footpaths_preprocessing.cc
modules/footpaths/test/: keys_test.cc  matching_test.cc  transfers_test.cc
modules/gbfs/: CMakeLists.txt
modules/gbfs/src/: free_bike.cc  gbfs.cc  station.cc  system_information.cc  system_status.cc
modules/gbfs/test/: gbfs_free_bike_test.cc  gbfs_json_test.cc  gbfs_parse_station_test.cc
modules/gbfs/test_resources/: free_bike_status.json  stations.json
modules/guesser/: CMakeLists.txt
modules/guesser/src/: guesser.cc
modules/intermodal/: CMakeLists.txt
modules/intermodal/src/: direct_connections.cc  intermodal.cc  mumo_edge.cc  ondemand_availability.cc  query_bounds.cc  ridesharing_edges.cc  stations_filter.cc
modules/intermodal/test/: intermodal_itest.cc
modules/intermodal/test_server/: CMakeLists.txt  test_server.cc  test_server_impl.cc
modules/isochrone/: CMakeLists.txt
modules/isochrone/src/: isochrone.cc
modules/lookup/: CMakeLists.txt
modules/lookup/src/: lookup.cc  lookup_geo_station.cc  lookup_id_train.cc  lookup_meta_station.cc  lookup_ribasis.cc  lookup_station_events.cc  lookup_station_info.cc
modules/lookup/test/: id_train_itest.cc  meta_station_itest.cc  station_events_itest.cc
modules/mcraptor/: CMakeLists.txt
modules/mcraptor/src/: additional_start.cc  get_raptor_timetable.cc  raptor.cc  raptor_query.cc  raptor_timetable.cc
modules/mcraptor/test/: raptor_print_test.cc
modules/metrics/: CMakeLists.txt
modules/metrics/src/: metrics.cc
modules/nigiri/: CMakeLists.txt
modules/nigiri/src/: extern_trip.cc  geo_station_lookup.cc  get_station.cc  gtfsrt.cc  guesser.cc  initial_permalink.cc  location.cc  metrics.cc  nigiri.cc  nigiri_to_motis_journey.cc  railviz.cc  resolve_run.cc  routing.cc  station_lookup.cc  tag_lookup.cc  trip_to_connection.cc
modules/nigiri/test/: dst_test.cc  max_transfers_test.cc  railviz_test.cc  rt_test.cc  utils.h
modules/osr/: CMakeLists.txt
modules/osr/src/: osr.cc
modules/osrm/: CMakeLists.txt
modules/osrm/src/: osrm.cc  router.cc
modules/parking/: CMakeLists.txt
modules/parking/dbschema/: FootEdges.fbs
modules/parking/src/: database.cc  foot_edges.cc  mumo_edges.cc  osm_parking_lots.cc  parkendd.cc  parking.cc  parking_edges.cc  parking_lot.cc  parkings.cc  stations.cc
modules/parking/test/: parking_test.cc
modules/parking/test_resources/: parking.txt  (+1 more)
modules/path/: CMakeLists.txt  README.md
modules/paxassign/: CMakeLists.txt
modules/paxforecast/: CMakeLists.txt
(+15903 files in other folders)
